<resources>
    <string name="app_name">MoneyBank</string>
    <string name="section">Ingresa los datos del prestamo</string>
    <string name="amountLoan">Monto del préstamo en RD$:</string>
    <string name="rate">Tasa de Porcentaje Anual %:</string>
    <string name="time">Plazo:</string>
    <string name="clearButton">Limpiar</string>
    <string name="calculateButton">Calcular</string>
    <string name="hintAmout">RD$250,000.00</string>
    <string name="hintRate">16.95%</string>
    <string name="hintTime">60</string>
    <string name="mainActivityMsg">Calculadora de prestamos</string>
    <string name="subTitleMainActivityMsg">Ingresa los datos</string>
    <string name="amortizationView">Tabla de amortización</string>
    <string name="paymentsDetails">Tabla de amortización</string>
    <string name="nullValues">No pueden haber campos vacios.</string>
    <string name="confirm">¿Seguro que desea ir atras?</string>
    <string name="tableAmount">Monto: RD$</string>
    <string name="tableRate">Tasa:%</string>
    <string name="tableTime">No. Pago</string>
    <string name="tablePayment">Cuota: RD$</string>
    <string name="tableInterest">Interes: </string>
    <string name="tableCapitalPayment">Pago capital: RD$</string>
    <string name="tableCurrentCapital">Capital restante: RD$</string>
</resources>
